--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
   <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
 
 </body>
-
+I added "<a href="page2.html">Page 2</a>"
 </html>
